# DhuniTech

./: .gitignore  Procfile  README.rst  docker-compose.yml  pyproject.toml  test.py
user_components/: pyproject.toml
user_components/dhuni_tech/candidate/adapters/: orm.py  repository.py
user_components/dhuni_tech/candidate/alembic_versions/: 8e0d5f9013fa_init_candidate_base.py  8e25870580c0_jon_data.py  dc06511e8d5a_create_migrations.py  ee5b28c500c0_for_skill.py
user_components/dhuni_tech/candidate/domain/: command.py  domain_handler.py  exceptions.py  model.py
user_components/dhuni_tech/candidate/entrypoints/: route_handler.py  routes.py
user_components/dhuni_tech/candidate/service_layers/: abstract.py  handlers.py  unit_of_work.py
user_components/dhuni_tech/candidate/views/: views.py
user_components/dhuni_tech/job/adapters/: orm.py  repository.py
user_components/dhuni_tech/job/alembic_versions/: 05608fca53a3_for_skill_job.py  4bba88deb4a0_create_migrations.py  837af29ea01d_init_job_skills.py  a4a5f7ab654d_create_job.py
user_components/dhuni_tech/job/domain/: command.py  domain_handler.py  exceptions.py  model.py
user_components/dhuni_tech/job/entrypoints/: route_handler.py  routes.py
user_components/dhuni_tech/job/service_layers/: abstract.py  handlers.py  unit_of_work.py
user_components/dhuni_tech/job/views/: views.py
user_components/dhuni_tech/skill_similarity/entrypoints/: route_handler.py  routes.py
user_components/dhuni_tech/skill_similarity/views/: views.py
user_components/dhuni_tech/user/adapters/: orm.py  repository.py
(+24 files in other folders)
