[tool.poetry]
name = "user_components"
version = "0.1.0"
description = ""
authors = ["Addy <Addy@gmail.com>"]

packages =[{include ="dhuni_tech"}]

[tool.poetry.dependencies]
python = "3.10.4"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
